grammar.js
    module: ($) => repeat($._statement),

    _statement: ($) => choice($._simple_statements, $._compound_statement),

    // Simple statements

    return_statement: ($) => seq("return", optional($._expressions)),

    _expressions: ($) => choice($.expression, $.expression_list),

    function_definition: ($) => seq(
      optional('async'),
      choice('def', 'fn'),
      optional(seq('[',
        field('name', $.identifier),
        field('type_parameters', optional($.type_parameter)),
        field('parameters', $.parameters),
        ']')),
      field('name', $.identifier),
      field('type_parameters', optional($.type_parameter)),
      field('parameters', $.parameters),
      optional($.unified_clause),
      optional($._function_effects),
      optional($.result_convention),
      optional(
        seq(
          '->',
          optional($._ref_convention),
          field('return_type', $.type),
        ),
      ),
      repeat($.where_clause),
      ':',
      field('body', $._suite),
    ),

    // A brace-delimited capture/result convention preceding the return type,
    // e.g. `def f(...) {read} -> T:`. Each convention may bind a name, as in
    // `def f() {read x, mut y}:`.
    _function_effects: ($) => repeat1(choice(
      // A typed `raises` carries an optional error type. The error type is an
      // expression-level type (parametric `Errors[X]`, unioned `A | B`, dotted
      // `mod.Err`) but never a bare `constrained_type`, whose `:` would
      // otherwise swallow the function body colon in `def f() raises HALError:`.
      seq('raises', optional(field('raises_type', alias($._raises_type, $.type)))),
      // `capturing`/`escaping` may carry an origin list, e.g. `capturing[_]`.
      seq(choice('capturing', 'escaping'), optional($.capture_list)),
      'thin',
    )),

    parameters: ($) => seq(
      '(',
      optional($._parameters),
      ')',
    ),

    list_splat: ($) => seq(
      '*',
      $.expression,
    ),

    dictionary_splat: ($) => seq(
      '**',
      $.expression,
    ),

    class_definition: ($) => seq(
      choice('class', 'struct'),
      field('name', $.identifier),
      field('type_parameters', optional($.type_parameter)),
      field(
        'superclasses',
        optional(alias($.superclass_list, $.argument_list)),
      ),
      ':',
      field('body', $._suite),
    ),

    // A struct conformance list, like an argument list except each entry may
    // carry `where` constraints, e.g. `Copyable where conforms_to(T, Copyable)`.
    argument_list: ($) => seq(
      '(',
      optional(commaSep1(
        choice(
          $.expression,
          $.list_splat,
          $.dictionary_splat,
          alias($.parenthesized_list_splat, $.parenthesized_expression),
          $.keyword_argument,
        ),
      )),
      optional(','),
      ')',
    ),

    _suite: ($) =>
      choice(
        alias($._simple_statements, $.block),
        seq($._indent, $.block),
        alias($._newline, $.block),
      ),

    block: ($) => seq(repeat($._statement), $._dedent),

    _parameters: ($) => seq(commaSep1($.parameter), optional(",")),

    _patterns: ($) => seq(commaSep1($.pattern), optional(",")),

    tuple_pattern: ($) => seq("(", optional($._patterns), ")"),

    _ref_convention: ($) => prec(1, seq("ref", "[", $.expression, "]")),
    self_parameter: ($) =>
      prec.right(seq(
        optional($.argument_convention),
        SELF,
        optional(seq(":", field("type", $.type))),
      )),

    _expression_within_for_in_clause: ($) =>
      choice($.expression, alias($.lambda_within_for_in_clause, $.lambda)),

    binary_operator: ($) => {
      const table = [
        [prec.left, "+", PREC.plus],
        [prec.left, "-", PREC.plus],
        [prec.left, "*", PREC.times],
        [prec.left, "@", PREC.times],
        [prec.left, "/", PREC.times],
        [prec.left, "%", PREC.times],
        [prec.left, "//", PREC.times],
        [prec.right, "**", PREC.power],
        [prec.left, "|", PREC.bitwise_or],
        [prec.left, "&", PREC.bitwise_and],
        [prec.left, "^", PREC.xor],
        [prec.left, "<<", PREC.shift],
        [prec.left, ">>", PREC.shift],
      ];

      // @ts-ignore
      return choice(
        ...table.map(([fn, operator, precedence]) =>
          fn(
            precedence,
            seq(
              field("left", $.primary_expression),
              // @ts-ignore
              field("operator", operator),
              field("right", $.primary_expression),
            ),
          ),
        ),
      );
    },

    unary_operator: ($) =>
      prec(
        PREC.unary,
        seq(
          field("operator", choice("+", "-", "~")),
          field("argument", $.primary_expression),
        ),
      ),

    lambda: ($) =>
      prec(
        PREC.lambda,
        seq(
          "lambda",
          field("parameters", optional($.lambda_parameters)),
          ":",
          field("body", $.expression),
        ),
      ),

    _left_hand_side: ($) => choice($.pattern, $.pattern_list, $.string, $.call),

    pattern_list: ($) =>
      seq(
        $.pattern,
        choice(",", seq(repeat1(seq(",", $.pattern)), optional(","))),
      ),

    attribute: ($) =>
      prec(
        PREC.call,
        seq(
          field("object", $.primary_expression),
          ".",
          choice(
            field("attribute", choice(
              $.identifier,
              'var',
              'comptime',
              'ref',
              'read',
              'mut',
              'out',
              'deinit',
              'unified',
              'where',
            )),
            seq($.string_start, $.string_content, $.string_end),
          ),
        ),
      ),

    subscript: ($) =>
      prec(
        PREC.call,
        seq(
          field("value", $.primary_expression),
          "[",
          // Empty brackets are allowed for parametric instantiation, e.g.
          // `_CString[]`, where every parameter is inferred or defaulted.
          optional(seq(
            commaSep1(field("subscript", choice(
              $.expression,
              $.slice,
              $.keyword_argument,
              // A keyword argument whose value is a slice, e.g. `x[byte=1:n]`.
              alias($.slice_keyword_argument, $.keyword_argument),
              // A callable type argument, e.g. `Variant[def() -> Path]`.
              $.function_type,
              // A bare convention keyword used as a parameter argument, e.g.
              // the `mut` in `unsafe_mut_cast[mut]`.
              alias(choice("mut", "out"), $.identifier),
            ))),
            optional(","),
          )),
          "]",
        ),
      ),

    call: ($) =>
      prec(
        PREC.call,
        seq(
          field("function", $.primary_expression),
          optional($.parameter_list),
          field("arguments", choice($.generator_expression, $.argument_list)),
        ),
      ),

    type: ($) => choice(
      prec(1, $.expression),
      $.splat_type,
      $.generic_type,
      $.called_type,
      $.union_type,
      $.constrained_type,
      $.member_type,
      $.function_type,
    ),

    // A parametric instantiation that is immediately called, used in type
    // position, e.g. `Device[get_device_spec[0]()]`. The generic-type reading
    // would otherwise consume `Name[...]` and strand the trailing `()`. A
    // trailing member-call chain (`get_device_spec[0]()._mlir_target()`) and a
    // dotted parametric base (`TypeList.splat[...]()`) are also supported.
    list: ($) => seq("[", optional($._collection_elements), "]"),

    set: ($) => seq("{", $._collection_elements, "}"),

    tuple: ($) => seq("(", optional($._collection_elements), ")"),

    dictionary: ($) =>
      seq(
        "{",
        optional(commaSep1(choice($.pair, $.dictionary_splat))),
        optional(","),
        "}",
      ),

    pair: ($) =>
      seq(field("key", $.expression), ":", field("value", $.expression)),

    // A struct/initializer literal, e.g. `{ ptr = p, length = n }` or
    // `{ ctx, name = value }` mixing positional and named fields.
    list_comprehension: ($) =>
      seq("[", field("body", $.expression), $._comprehension_clauses, "]"),

    dictionary_comprehension: ($) =>
      seq("{", field("body", $.pair), $._comprehension_clauses, "}"),

    set_comprehension: ($) =>
      seq("{", field("body", $.expression), $._comprehension_clauses, "}"),

    generator_expression: ($) =>
      seq("(", field("body", $.expression), $._comprehension_clauses, ")"),

    _comprehension_clauses: ($) =>
      seq($.for_in_clause, repeat(choice($.for_in_clause, $.if_clause))),

    _collection_elements: ($) =>
      seq(
        commaSep1(
          choice(
            $.expression,
            $.yield,
            $.list_splat,
            $.parenthesized_list_splat,
          ),
        ),
        optional(","),
      ),

    for_in_clause: ($) =>
      prec.left(
        seq(
          optional("async"),
          "for",
          optional($.argument_convention),
          field("left", $._left_hand_side),
          "in",
          field("right", commaSep1($._expression_within_for_in_clause)),
          optional(","),
        ),
      ),

    if_clause: ($) => seq("if", $.expression),

    conditional_expression: ($) =>
      prec.right(
        PREC.conditional,
        seq($.expression, "if", $.expression, "else", $.expression),
      ),

    concatenated_string: ($) => seq($.string, repeat1($.string)),

    string: ($) =>
      seq(
        $.string_start,
        repeat(choice($.interpolation, $.string_content)),
        $.string_end,
      ),

    string_content: ($) =>
      prec.right(
        repeat1(
          choice(
            $.escape_interpolation,
            $.escape_sequence,
            $._not_escape_sequence,
            $._string_content,
          ),
        ),
      ),

    interpolation: ($) =>
      seq(
        "{",
        field("expression", $._f_expression),
        optional("="),
        optional(field("type_conversion", $.type_conversion)),
        optional(field("format_specifier", $.format_specifier)),
        "}",
      ),

    _f_expression: ($) =>
      choice($.expression, $.expression_list, $.pattern_list, $.yield),

    escape_sequence: (_) =>
      token.immediate(
        prec(
          1,
          seq(
            "\\",
            choice(
              /u[a-fA-F\d]{4}/,
              /U[a-fA-F\d]{8}/,
              /x[a-fA-F\d]{2}/,
              /\d{1,3}/,
              /\r?\n/,
              /['"abfrntv\\]/,
              /N\{[^}]+\}/,
            ),
          ),
        ),
      ),

    _not_escape_sequence: (_) => token.immediate("\\"),

    integer: (_) =>
      token(
        choice(
          seq(choice("0x", "0X"), repeat1(/_?[A-Fa-f0-9]+/), optional(/[Ll]/)),
          seq(choice("0o", "0O"), repeat1(/_?[0-7]+/), optional(/[Ll]/)),
          seq(choice("0b", "0B"), repeat1(/_?[0-1]+/), optional(/[Ll]/)),
          seq(
            repeat1(/[0-9]+_?/),
            choice(
              optional(/[Ll]/), // long numbers
              optional(/[jJ]/), // complex numbers
            ),
          ),
        ),
      ),

    float: (_) => {
      const digits = repeat1(/[0-9]+_?/);
      const exponent = seq(/[eE][\+-]?/, digits);

      return token(
        seq(
          choice(
            seq(digits, ".", optional(digits), optional(exponent)),
            seq(optional(digits), ".", digits, optional(exponent)),
            seq(digits, exponent),
          ),
          optional(/[jJ]/),
        ),
      );
    },

    identifier: (_) => /[_\p{XID_Start}][_\p{XID_Continue}]*/,

    true: (_) => "True",
    false: (_) => "False",
    none: (_) => "None",

    comment: (_) => token(seq("#", /.*/)),
